--- a/book_classroom-master/css/style.css
+++ b/book_classroom-master/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: Arboria;
     src: url(../fonts/Arboria-Bold.otf);
-  }
+}
 
 * {
     box-sizing: border-box;
@@ -11,18 +11,21 @@
 }
 
 body {
-    background-color: #575A60;
+    background-color: #eeeeee;
 }
 
 .login {
     max-width: 500px;
     height: 485px;
     background-color: #4A4D53;
-    box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
     margin: auto;
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .register {
@@ -32,11 +35,11 @@ body {
 .img {
     width: 50%;
     max-width: 200px;
-    max-height: 200px;  
+    max-height: 200px;
     display: block;
     margin: auto;
     margin-top: -80px;
-    box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
 }
 
@@ -87,7 +90,7 @@ header {
     width: 100%;
     height: 75px;
     background-color: #4A4D53;
-    box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
 .classroom-container {
@@ -95,11 +98,14 @@ header {
     max-width: 1620px;
     height: 820px;
     background-color: #4A4D53;
-    box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
     margin: auto;
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     padding: 150px;
 }
 
@@ -137,7 +143,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    height: 50%;
+    height: 35%;
     width: 50%;
     border-radius: 9px;
 
@@ -148,17 +154,31 @@ header {
 }
 
 .pop-up div:nth-child(1) {
-    font-size: 30px;
-    margin-bottom: 15px;
+    font-size: 24px;
+    margin-bottom: 35px;
 }
 
 .btn-yes {
-    background-color: rgb(0, 235, 0);
+    background-color: #f44336;
+}
+
+.btn-no {
+    background-color: #b2bec3;
+}
+
+.pop-up button:hover {
+    color: #000;
 }
 
 .pop-up button {
-    border-radius: 9px;
-    height: 15px;
-    width: 25px;
+    border: none;
+    padding: 15px 32px;
     text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 50px;
+    color: #fff;
 }
